// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-cidDSM dnmumO"
  >
    <div
      class="sc-dtDOqo djbEJX"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-cidDSM dnmumO"
  >
    <div
      class="sc-dtDOqo djbEJX"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-bkkeKt jHnHBY"
  >
    <table
      class="sc-gSQFLo jVipUh"
    >
      <tbody
        class="sc-lbhJGD hLfZsI"
      >
        <tr
          class="sc-jeraig gFTToD"
        >
          <td
            class="sc-eJwWfJ ihBO"
          >
            Server version
          </td>
          <td
            class="sc-nVkyK"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-jeraig gFTToD"
        >
          <td
            class="sc-eJwWfJ ihBO"
          >
            Server address
          </td>
          <td
            class="sc-nVkyK"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-jeraig gFTToD"
        >
          <td
            class="sc-eJwWfJ ihBO"
          >
            Query
          </td>
          <td
            class="sc-nVkyK"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-jeraig gFTToD"
        >
          <td
            class="sc-eJwWfJ ihBO"
          >
            Summary
            <div
              class="sc-iNGGcK jYRvPq fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-nVkyK"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-jeraig gFTToD"
        >
          <td
            class="sc-eJwWfJ ihBO"
          >
            Response
            <div
              class="sc-iNGGcK jYRvPq fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-nVkyK"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
